RESOLVED FIXED237985
PiP on Vimeo freezes when toggled
https://bugs.webkit.org/show_bug.cgi?id=237985
Summary PiP on Vimeo freezes when toggled
Peng Liu
Reported 2022-03-16 15:01:01 PDT
PiP on Vimeo freezes when toggled
Attachments
Patch (2.40 KB, patch)
2022-03-16 15:05 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2022-03-16 15:05:47 PDT
Peng Liu
Comment 2 2022-03-16 15:06:36 PDT
EWS
Comment 3 2022-03-17 10:20:44 PDT
Committed r291418 (248545@main): <https://commits.webkit.org/248545@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454900 [details].
Note You need to log in before you can comment on or make changes to this bug.