PiP on Vimeo freezes when toggled https://bugs.webkit.org/show_bug.cgi?id=237985

Patch by Peng Liu <peng.liu6@icloud.com> on 2022-03-17
Reviewed by Jer Noble.

Add a quirk for vimeo.com to disable the "webkitendfullscreen" event when a video enters
picture-in-picture from fullscreen.

Tested manually.

* page/Quirks.cpp:
(WebCore::Quirks::shouldDisableEndFullscreenEventWhenEnteringPictureInPictureFromFullscreenQuirk const):


Canonical link: https://commits.webkit.org/248545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291418 268f45cc-cd09-0410-ab3c-d52691b4dbfc